--- a/frontend/barberia-spa/package.json
+++ b/frontend/barberia-spa/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --watch=false --browsers=ChromeHeadlessCustom --karma-config karma.conf.js"
   },
   "private": true,
   "dependencies": {
